Edited Task 1 and Task 2

--- a/lesson-11-layouts/task2.html
+++ b/lesson-11-layouts/task2.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>$Title$</title>
+	<title>Task 2</title>
+	<link rel="stylesheet" href="style2.css">
 </head>
 <body>
-	$END$
+	<div class="reviews">
+		<h2 class="title"><span class="first-word">What</span> client says</h2>
+		<div class="ninja">
+			<img src="knives-ninja.png" title="ninja" class="ninja-pic">
+			<div class="ninja-review">
+				<span class="name">Staciya Trollio</span>
+				<span class="customer">Customer</span>
+				<hr>
+				<p class="review-text">Lorem ipsum is simply dummy text of the printing and industry. Lorem ipsum has been the industry.</p>
+			</div>
+		</div>
+		<div class="deer">
+			<img src="ponsy-deer.png" title="deer" class="deer-pic">
+			<div class="deer-review">
+				<span class="name">David Soul</span>
+				<span class="customer">Customer</span>
+				<hr>
+				<p class="review-text">Lorem ipsum is simply dummy text of the printing and industry. Lorem ipsum has been the industry.</p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
