--- a/lesson-11-layouts/task1.html
+++ b/lesson-11-layouts/task1.html
@@ -1,10 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>$Title$</title>
+	<title>Task1</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
+	<link rel="stylesheet" href="style1.css">
 </head>
 <body>
-	$END$
+	<div class="prices">
+	<div class="pricing-block standard">
+		<h3 class="title">Standard</h3>
+		<h4 class="content">Iconic Graphics</h4>
+		<p class="value">
+			<sup>$</sup>10<sub>Monthly</sub>
+		</p>
+		<ul class="features">
+			<li>Unmetered Traffic</li>
+			<li>Unlimited Domain</li>
+			<li>Unlimited Databases</li>
+			<li>Unlimited e-Mails</li>
+		</ul>
+		<a class="cta-btn" href="">Enroll Today</a>
+	</div>
+	<div class="pricing-block best-value">
+		<h3 class="title">Best value</h3>
+		<h4 class="content">Iconic Graphics</h4>
+		<p class="value">
+			<sup>$</sup>25<sub>Monthly</sub>
+		</p>
+		<ul class="features">
+			<li>PHP, PERL, ASP, JSP</li>
+			<li>SEMI DEDICATED</li>
+			<li>Staging or Production</li>
+			<li>Unlimited e-Mails</li>
+		</ul>
+		<a class="cta-btn" href="">Enroll Today</a>
+	</div>
+	<div class="pricing-block ultimate">
+		<h3 class="title">Ultimate</h3>
+		<h4 class="content">Iconic Graphics</h4>
+		<p class="value">
+			<sup>$</sup>35<sub>Monthly</sub>
+		</p>
+		<ul class="features">
+			<li>Semi Dedicated</li>
+			<li>1TB Storage</li>
+			<li>Faster Site, Better SEO</li>
+			<li>Unlimited e-Mails</li>
+		</ul>
+		<a class="cta-btn" href="">Enroll Today</a>
+	</div>
+	</div>
 </body>
 </html>
